# opencode_jrm_test

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  app.yaml  databricks.yml  pyproject.toml  requirements.txt
notebooks/: .gitkeep
src/jrm_advisor/: __main__.py
src/jrm_advisor/app/: __init__.py  app.py  backend.py  backend_mock.py  charts.py  feedback.py  requirements.txt
src/jrm_advisor/campaign_resolver/: __init__.py  client.py
src/jrm_advisor/composer/: composer.py
src/jrm_advisor/evaluation/: __init__.py  dataset.py  run_eval.py  scorers.py
src/jrm_advisor/genie/: __init__.py  client.py
src/jrm_advisor/knowledge_base/: __init__.py  client.py
src/jrm_advisor/supervisor/: __init__.py  agent.py
src/jrm_advisor/visualization/: spec.py
tests/app/: __init__.py  test_backend_mock.py  test_charts.py  test_feedback.py
tests/campaign_resolver/: test_client.py
tests/composer/: test_composer.py
tests/evaluation/: test_dataset.py  test_scorers.py
tests/genie/: test_client.py
tests/knowledge_base/: test_client.py
tests/supervisor/: test_agent.py
tests/visualization/: test_spec.py
