[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jrm-advisor"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "databricks-sdk>=0.20",
    "mlflow[databricks]>=3.1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff>=0.4",
]
app = [
    "streamlit>=1.38",
    "plotly>=5.20",
    "pandas>=2.0",
]
eval = [
    # Required for MLflow GenAI LLM-scored dimensions (Correctness, Guidelines)
    # when tracking URI is set to "databricks".
    "databricks-agents>=0.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
